--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,7 +10,7 @@ log4j.rootLogger=INFO, FILE
 #log4j.appender.CONSOLE.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}#%M(): %m%n
 
 # Define the file appender
-log4j.appender.FILE=org.ferris.clipj.console.log4j.Log4jRollingFileAppender
+log4j.appender.FILE=org.ferris.clipj.window.log4j.Log4jRollingFileAppender
 log4j.appender.FILE.ImmediateFlush=true
 log4j.appender.FILE.Threshold=DEBUG
 log4j.appender.FILE.Append=true
@@ -23,4 +23,4 @@ log4j.appender.FILE.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}#
 log4j.logger.org.jboss.weld=INFO
 
 # Log all of riviera at DEBUG level
-log4j.logger.org.ferris.clipj.console=DEBUG
+log4j.logger.org.ferris.clipj.window=DEBUG
