Continue pages for project site

--- a/src/main/assemblies/conf/preferences.properties
+++ b/src/main/assemblies/conf/preferences.properties
@@ -1,11 +1,7 @@
 #
-# The maximum number of clipboard items to maintain in history once
+# The maximum number of clipboard items to maintain in history. Once
 # the maximum size is reached, new clipboard items will be added to 
 # the top and last one at the bottom will be dropped.
 MaxHistorySize=10
 
-#
-# This is the maximum number of characters to display in the popup menu.
-#
-MaxPreviewSize=100
 
