--- a/pom.xml
+++ b/pom.xml
@@ -77,9 +77,19 @@
         </dependency>
         <!-- LOG4J LOG4J LOG4J LOG4J LOG4J LOG4J LOG4J LOG4J LOG4J LOG4J LOG4J LOG4J LOG4J LOG4J LOG4J -->
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.3.14</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.3.14</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.13</version>
         </dependency>
     </dependencies>       
     
