--- a/pom.xml
+++ b/pom.xml
@@ -263,7 +263,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-site-plugin</artifactId>
-                        <version>3.0</version>
+                        <!--<version>3.0</version>-->
                         <executions>
                             <execution>
                                 <phase>prepare-package</phase>
