--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   
     <groupId>org.ferris</groupId>
     <artifactId>ferris-clipj</artifactId>    
-    <version>1.2.1.0-SNAPSHOT</version>
+    <version>1.2.1.0</version>
     <packaging>jar</packaging>
     
     <organization>
